--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 asgiref==3.8.1
-Django==4.2.11
-sqlparse==0.4.4
-typing-extensions==4.10.0
+barcode==1.0.4
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0.4
+django-pwa==1.1.0
+idna==3.7
+Levenshtein==0.25.1
+python-barcode==0.15.1
+python-Levenshtein==0.25.1
+rapidfuzz==3.8.1
+requests==2.31.0
+setuptools==69.5.1
+sqlparse==0.5.0
 tzdata==2024.1
+urllib3==2.2.1
